--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: node_js
 node_js: 
-  - 22.1.0
+  - 20.15.0
 
 before_install: 
-  - nvm install 22.1.0
-  - nvm use 22.1.0
-  - npm install 
+  - nvm use 20.15.0
+  - npm install -g
 
 cache: 
   npm: false
