--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
-node_js: 
-  - 20.15.0
 
 before_install: 
-  - nvm use 20.15.0
-  - npm install -g
+  - nvm install-latest-npm
+  - npm install
 
 cache: 
   npm: false
