--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 
 before_install: 
-  - nvm install-latest-npm
+  - nvm install
   - npm install
+
+script: 
+  - cd tests && npm test
 
 cache: 
   npm: false
