--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,9 @@
-dist: focal
 language: node_js
-
-services: 
-  - mongodb
-
-env:
-  global: 
-    _ DB_CONN_STRING=mongodb+srv://riccardo:patpat@xbooks.bspswjh.mongodb.net/?retryWrites=true&w=majority&appName=XBooks
-    _ DB_NAME=books
-    _ ACCESS_TOKEN_SECRET=miscimosci
+node_js: 
+  - 12.22.9
 
 before_install: 
-  - nvm install
-  - npm install
+  - npm install -g npm@10.8.2
 
 cache: 
   npm: false
